--- a/src/main/resources/templates/fragments/common-allegatiext.html
+++ b/src/main/resources/templates/fragments/common-allegatiext.html
@@ -53,9 +53,9 @@
 	 		var oMyForm = new FormData();
             oMyForm.append("multiPartFile", $(element)[0].files[0]);
 
-//             if(stato != 'INTEGRAZIONE')
-//             	oMyForm.append("fileId", (!fileId) ? 0 : fileId );
-//             else
+         /* 	if(stato != 'INTEGRAZIONE')
+				oMyForm.append("fileId", (!fileId) ? 0 : fileId );
+             else */
             	oMyForm.append("fileId", 0);
             oMyForm.append("tipo",tipoAllegato);
            	oMyForm.append([[${_csrf.parameterName}]],[[${_csrf.token}]]);
