--- a/src/main/resources/templates/evento/eventoRendiconto.html
+++ b/src/main/resources/templates/evento/eventoRendiconto.html
@@ -21,6 +21,8 @@
 			</div>
 		</div>
 
+		<h2 class="col-xs-12 alert alert-info with-margin-top text-center" th:text="#{label.upload_sponsor_before}"></h2>
+
 		<div class="row">
 
 			<div class="col-lg-12 col-xs-12">
