--- a/src/main/resources/templates/pianoFormativo/pianoFormativoFragment.html
+++ b/src/main/resources/templates/pianoFormativo/pianoFormativoFragment.html
@@ -8,7 +8,7 @@
 	<!-- tabella degli eventi del pianoFormativo -->
 	<th:block th:fragment="pianoFormativo(pianoFormativo, accreditamentoId, mode, editabileFull, idEditabili)">
 		<!-- differenzia se il piano formativo viene chiamato dall'accreditamento o dall'apposita sidebar -->
-		<th:block th:with="prefixURL=${accreditamentoId != null ? '/accreditamento/'+accreditamentoId : ''},
+		<th:block th:with="prefixURL=${accreditamentoId != null ? '/accreditamento/' + accreditamentoId + '/' : '/'},
 			urlParam=${mode != 'show' ? '?from='+mode : ''},
 			hasActionButtons=${mode != 'show' and mode != 'enableField'},
 			valutabile=${mode == 'validate'},
@@ -29,7 +29,7 @@
 					</thead>
 					<tbody>
 						<tr th:each="evento, row : ${__${pianoFormativo}__.eventiPianoFormativo}">
-							<td><a th:text="${evento.titolo}" th:href="@{|${prefixURL}/provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/show${urlParam}|}"></a></td>
+							<td><a th:text="${evento.titolo}" th:href="@{|${prefixURL}provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/show${urlParam}|}"></a></td>
 							<td th:text="${evento.getCodiceIdentificativo()}"></td>
 							<td th:text="${evento.proceduraFormativa.name()}"></td>
 							<th:block th:unless="${editabile or enableField}">
@@ -51,22 +51,22 @@
 							<th:block th:if="${hasActionButtons}">
 								<td th:if="${editabile}">
 									<span style="white-space: nowrap">
-										<!-- <a th:if="${!evento.new and __${pianoFormativo}__.pianoModificabile and editabileFull}" th:href="@{|${prefixURL}/provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/delete|}" class="btn btn-table double btn-danger"><span class="fa fa-trash"></span> <span th:text="#{label.elimina}"></span></a> -->
+										<!-- <a th:if="${!evento.new and __${pianoFormativo}__.pianoModificabile and editabileFull}" th:href="@{|${prefixURL}provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/delete|}" class="btn btn-table double btn-danger"><span class="fa fa-trash"></span> <span th:text="#{label.elimina}"></span></a> -->
 
 										<button th:if="${!evento.new and __${pianoFormativo}__.pianoModificabile and editabileFull}" class="btn btn-danger btn-table double" th:onclick="|confirmDeleteEventoPianoFormativoModal('${__${pianoFormativo}__.provider.id}','${__${pianoFormativo}__.id}','${evento.id}','@{|${prefixURL}|}','${evento.proceduraFormativa}','${evento.codiceIdentificativo}')|"><i class="fa fa-trash"></i><span th:text="#{label.elimina}"> </span></button>
 
 										<a th:if="${evento.new or !__${pianoFormativo}__.pianoModificabile or !editabileFull}" class="btn btn-table double btn-danger disabled"><span class="fa fa-trash"></span> <span th:text="#{label.elimina}"></span></a>
-										<a th:if="${!evento.new and idEditabili != null and !#lists.isEmpty(T(it.tredi.ecm.utils.Utils).getSubsetOfIdFieldEnum(idEditabili, evento.id,'EVENTO_PIANO_FORMATIVO'))}" th:href="@{|${prefixURL}/provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/edit|}" class="btn btn-primary btn-table double"><span class="fa fa-pencil"></span> <span th:text="#{label.modifica}">Modifica</span></a>
-										<a th:if="${!evento.new and idEditabili == null and editabileFull}" th:href="@{|${prefixURL}/provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/edit|}" class="btn btn-primary btn-table double"><span class="fa fa-pencil"></span> <span th:text="#{label.modifica}">Modifica</span></a>
+										<a th:if="${!evento.new and idEditabili != null and !#lists.isEmpty(T(it.tredi.ecm.utils.Utils).getSubsetOfIdFieldEnum(idEditabili, evento.id,'EVENTO_PIANO_FORMATIVO'))}" th:href="@{|${prefixURL}provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/edit|}" class="btn btn-primary btn-table double"><span class="fa fa-pencil"></span> <span th:text="#{label.modifica}">Modifica</span></a>
+										<a th:if="${!evento.new and idEditabili == null and editabileFull}" th:href="@{|${prefixURL}provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/edit|}" class="btn btn-primary btn-table double"><span class="fa fa-pencil"></span> <span th:text="#{label.modifica}">Modifica</span></a>
 										<a th:if="${evento.new or (idIEditabili == null and !editabileFull) or (idEditabili != null and #lists.isEmpty(T(it.tredi.ecm.utils.Utils).getSubsetOfIdFieldEnum(idEditabili, evento.id,'EVENTO_PIANO_FORMATIVO')))}" class="btn btn-primary btn-table double disabled"><span class="fa fa-pencil"></span> <span th:text="#{label.modifica}">Modifica</span></a>
 									</span>
 								</td>
 								<!-- TODO togliere se non serve più -->
 <!-- 								<td th:if="${valutabile}"> -->
-<!-- 									<a th:href="@{|${prefixURL}/provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/validate|}" class="btn btn-primary btn-table single"><i class="fa" th:classappend="${accreditamentoWrapper.canValutaDomanda ? 'fa-pencil': 'fa-eye'}"></i> <span th:text="${accreditamentoWrapper.canValutaDomanda} ? #{label.valuta} : #{label.mostra}">Valuta/Mostra</span></a> -->
+<!-- 									<a th:href="@{|${prefixURL}provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/validate|}" class="btn btn-primary btn-table single"><i class="fa" th:classappend="${accreditamentoWrapper.canValutaDomanda ? 'fa-pencil': 'fa-eye'}"></i> <span th:text="${accreditamentoWrapper.canValutaDomanda} ? #{label.valuta} : #{label.mostra}">Valuta/Mostra</span></a> -->
 <!-- 								</td> -->
 								<td th:if="${enableField}">
-									<a th:href="@{|${prefixURL}/provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/enableField|}" class="btn btn-primary btn-table single"><i class="fa" th:classappend="${'fa-pencil'}"></i> <span th:text="#{label.abilita_campi}">Abilita campi</span></a>
+									<a th:href="@{|${prefixURL}provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/enableField|}" class="btn btn-primary btn-table single"><i class="fa" th:classappend="${'fa-pencil'}"></i> <span th:text="#{label.abilita_campi}">Abilita campi</span></a>
 								</td>
 							</th:block>
 						</tr>
