--- a/src/main/resources/templates/accreditamento/accreditamentoValidate.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoValidate.html
@@ -171,7 +171,7 @@
 										th:text="#{label.conferma_valutazione}" data-toggle="modal" data-target=".modal-confirm"></a></li>
 									<th:block th:if="${accreditamentoWrapper.canPresaVisione}">
 										<li><a th:text="#{label.presa_visione}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/presaVisione|}"></a></li>
-										<li><a th:text="#{label.rivaluta}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/rivaluta|}"></a></li>
+<!-- 										<li><a th:text="#{label.rivaluta}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/rivaluta|}"></a></li> -->
 									</th:block>
 									<li class="divider actions" th:if="${accreditamentoWrapper.canConfermaValutazione or accreditamentoWrapper.canPresaVisione}"></li>
 									<li><a th:text="#{label.torna_in_visualizzazione}" onclick="switchMode('show')"></a></li>
