* a dotazione hw/ sw

--- a/src/main/resources/templates/evento/eventoFADEdit.html
+++ b/src/main/resources/templates/evento/eventoFADEdit.html
@@ -882,7 +882,7 @@
 									</label>
 									<label class="control-label col-md-3 col-sm-3 col-xs-11" for="dotazione">
 										<span th:text="#{label.dotazione_hardware_software}">Dotazione hardware e software necessaria all'utente per svolgere l'evento</span>
-										<span class="required hidden" id="brochure-obbligatoria">*</span>
+										<span class="required">*</span>
 									</label>
 									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 										<!-- <th:block th:include="fragments/allegati :: allegati(eventoWrapper, false, requisitiHardwareSoftware, null, null, null, false, null, true)" ></th:block> -->
