--- a/src/main/resources/templates/anagraficaEvento/anagraficaFragment.html
+++ b/src/main/resources/templates/anagraficaEvento/anagraficaFragment.html
@@ -78,7 +78,7 @@
 								</div>
 								<div class="item form-group" th:classappend="${#fields.hasErrors('anagraficaEventoWrapper.anagraficaEvento.anagrafica.cv')} ? 'bad'">
 									<div class="col-sm-1 col-xs-12"></div>
-									<th:block th:include="fragments/allegatiext :: allegatiext(anagraficaEventoWrapper.anagraficaEvento.anagrafica,false,'*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_CV}',cv, null,null,null,true,${mode},true)" />
+									<th:block th:include="fragments/allegatiext :: allegatiext(anagraficaEventoWrapper,false,'*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_CV}',cv, null,null,null,true,${mode},true)" />
 								</div>
 							</th:block>
 
