--- a/src/main/resources/templates/evento/eventoFADEdit.html
+++ b/src/main/resources/templates/evento/eventoFADEdit.html
@@ -147,7 +147,7 @@
 										<span class="required">*</span>
 									</label>
 									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="durata">
-											<input type="text" pattern="numeric" class="form-control" th:field="*{oreAttivita}" th:disabled="${isRiedizione or isEditSemiBloccato}" />
+											<input type="number" pattern="numeric" class="form-control" th:field="*{oreAttivita}" th:disabled="${isRiedizione or isEditSemiBloccato}" />
 									</div>
 								</div>
 
@@ -487,7 +487,7 @@
 										<span class="required">*</span>
 									</label>
 									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="partecipantiPrevisti">
-											<input type="text" pattern="numeric" class="form-control" th:field="${eventoWrapper.evento.numeroPartecipanti}" th:disabled="${isRiedizione or isEditSemiBloccato}" />
+											<input type="number" pattern="numeric" class="form-control" th:field="${eventoWrapper.evento.numeroPartecipanti}" th:disabled="${isRiedizione or isEditSemiBloccato}" />
 									</div>
 									<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.numeroPartecipanti')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.numeroPartecipanti')}__}"></div>
 								</div>
@@ -817,7 +817,7 @@
 										<span class="required">*</span>
 									</label>
 									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="creditiFormativi">
-											<input type="text" class="form-control crediti-proposti" th:field="${eventoWrapper.evento.crediti}" th:disabled="${isRiedizione or isEditSemiBloccato}" th:attr="data-editabile=${!isRiedizione and !isEditSemiBloccato}"/>
+											<input type="number" class="form-control crediti-proposti" th:field="${eventoWrapper.evento.crediti}" th:disabled="${isRiedizione or isEditSemiBloccato}" th:attr="data-editabile=${!isRiedizione and !isEditSemiBloccato}"/>
 									</div>
 									<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.crediti')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.crediti')}__}"></div>
 								</div>
@@ -868,7 +868,7 @@
 										<span class="required">*</span>
 									</label>
 									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11" id="quota">
-											<input type="text" class="form-control optional" th:field="${eventoWrapper.evento.quotaPartecipazione}" th:disabled="${isRiedizione or isEditSemiBloccato}" />
+											<input type="number" class="form-control optional" th:field="${eventoWrapper.evento.quotaPartecipazione}" th:disabled="${isRiedizione or isEditSemiBloccato}" />
 									</div>
 									<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.quotaPartecipazione')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.quotaPartecipazione')}__}"></div>
 								</div>
