--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -58,6 +58,7 @@
 									<!--
 									<li><a href="#" th:text="#{label.contributo_annuale}">label.contributo_annuale</a></li>
 									 -->
+									 <li><a th:href="@{/engineering/test/protocollo}" th:text="#{engineering.test_protocollo}">engineering.test_protocollo</a></li>
 								</ul>
 							</li>
 
