Integrazione Protocollo (manca chiamata ad avanzamento flusso)

--- a/src/main/resources/templates/accreditamento/datiAccreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoFragment.html
@@ -28,7 +28,7 @@
 							<input type="hidden" name="editId" th:value="${datiAccreditamentoWrapper.datiAccreditamento.id}" />
 							<input type="hidden" th:field="${datiAccreditamentoWrapper.accreditamentoId}" />
 							<input type="hidden" th:field="${datiAccreditamentoWrapper.idEditabili}" />
-							<input type="hidden" th:field="${datiAccreditamentoWrapper.provider.id}" />
+							<!-- <input type="hidden" th:field="${datiAccreditamentoWrapper.provider.id}" /> -->
 							<input type="hidden" th:field="${datiAccreditamentoWrapper.statoAccreditamento}" />
 							<input type="hidden" th:field="${datiAccreditamentoWrapper.fieldIntegrazione}" />
 							<input type="hidden" th:field="${datiAccreditamentoWrapper.wrapperMode}" />
